kubernetes/windows/data-api.deploy.yaml
#
# Deploy the back end data API microservice in Kubernetes
#

# ------------------- Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1
metadata:
  name: data-api
  labels:
    app: data-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      containers:
      - name: data-api-pods

        # !CHANGE THIS! To your real image reference for the data-api  
        image: bcdemo.azurecr.io/smilr/data-api:windows-1709

        ports:
        - containerPort: 4000
