kubernetes/windows/mongodb.all.yaml
#
# Deploy the back end databse in Kubernetes, as StatefulSet with a volume claim
#

# ------------------- Deployment ------------------- #

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-pods

        image: mongo:3.6.0-windowsservercore-1709

        ports:
        - containerPort: 27017

---

# ------------------- Internal Cluster IP ------------------- #

kind: Service
apiVersion: v1
metadata:
  name: mongodb-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
